# VirtualXposed

VirtualApp/lib/: build.gradle
VirtualApp/lib/src/main/jni/: CMakeLists.txt  HookZz
VirtualApp/lib/src/main/jni/Foundation/: IOUniformer.cpp  VMPatch.cpp
VirtualApp/lib/src/main/jni/fb/: CMakeLists.txt
